--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,5 @@ Encoding: UTF-8
 LazyData: true
 Authors@R: 
     person("Valentin", "Lucet", "valentin.lucet@gmail.com", role = "cre")
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.3
